--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,11 @@ idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10.1
 MarkupSafe==1.1.1
+numpy==1.17.0
+pandas==0.25.0
+python-dateutil==2.8.0
+pytz==2019.2
 requests==2.21.0
+six==1.12.0
 urllib3==1.24.2
 Werkzeug==0.15.4
